<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AddClothingActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <ImageView
        android:id="@+id/addImgDisplay"
        android:layout_width="420dp"
        android:layout_height="420dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/add_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAdd"
        android:layout_width="564dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Item Name"
        android:inputType="text"
        android:minHeight="36dp"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addImgDisplay" />

    <Button
        android:id="@+id/doneAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="36dp"
        android:text="DONE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTags" />

    <TextView
        android:id="@+id/tagDisplay"
        android:layout_width="567dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAdd" />

    <EditText
        android:id="@+id/editTags"
        android:layout_width="357dp"
        android:layout_height="57dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Tag Name"
        android:inputType="text"
        android:minHeight="36dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagDisplay" />

    <Button
        android:id="@+id/addTagButton"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/add"
        app:layout_constraintStart_toEndOf="@+id/editTags"
        app:layout_constraintTop_toBottomOf="@+id/tagDisplay" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>