<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="214dp"
        android:layout_height="129dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="459dp"
        android:text="@string/hello_first_fragment"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="558dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="125dp"
        android:text="@string/loginbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="309dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="374dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="313dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

<!--    <Button-->
<!--        android:id="@+id/loginButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="102dp"-->
<!--        android:layout_marginTop="439dp"-->
<!--        android:layout_marginEnd="219dp"-->
<!--        android:layout_marginBottom="244dp"-->
<!--        android:onClick="logIn"-->
<!--        android:text="@string/loginbutton"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <Button-->
    <!--        android:id="@+id/signupButton"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="217dp"-->
    <!--        android:layout_marginTop="439dp"-->
    <!--        android:layout_marginEnd="100dp"-->
    <!--        android:layout_marginBottom="244dp"-->
    <!--        android:text="@string/signupbutton"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>