...
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/placeholder" />

    <TextView
        android:id="@+id/nameDisplay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="name"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="300dp" />

...
        android:layout_height="wrap_content"
        android:text="Outfits"
        tools:layout_editor_absoluteX="292dp"
        tools:layout_editor_absoluteY="414dp" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DONE"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="667dp" />

...
