<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.DetailActivity">

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.9" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="68dp" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.1" />

  <ImageView
      android:id="@+id/imgDisplay"
      android:layout_width="350dp"
      android:layout_height="350dp"
      android:layout_marginTop="8dp"
      android:src="@drawable/placeholder_0"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline8" />

  <TextView
      android:id="@+id/nameDisplay"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="120dp"
      android:text="name"
      android:textSize="36sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imgDisplay" />

  <TextView
      android:id="@+id/tagDisplay"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="20dp"
      android:text="tag 1  |  tag 2  |  tag 3"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/nameDisplay" />

  <EditText
      android:id="@+id/editTags"
      android:layout_width="389dp"
      android:layout_height="54dp"
      android:layout_marginTop="12dp"
      android:autofillHints=""
      android:ems="10"
      android:hint="New Tag"
      android:inputType="text"
      android:minHeight="36dp"
      android:textSize="20dp"
      android:visibility="gone"
      app:layout_constraintEnd_toStartOf="@+id/addButton"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/guideline10"
      app:layout_constraintTop_toBottomOf="@+id/tagDisplay"
      tools:visibility="visible" />

  <Button
      android:id="@+id/addButton"
      android:layout_width="54dp"
      android:layout_height="54dp"
      android:layout_marginTop="12dp"
      android:layout_marginEnd="8dp"
      android:background="@drawable/add"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="@+id/editTags"
      app:layout_constraintEnd_toStartOf="@+id/buttonGuide"
      app:layout_constraintTop_toBottomOf="@+id/tagDisplay"
      app:layout_constraintVertical_bias="0.0"
      tools:visibility="visible" />

  <Button
      android:id="@+id/removeButton"
      android:layout_width="54dp"
      android:layout_height="54dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/remove"
      android:visibility="visible"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:visibility="visible" />

  <Button
      android:id="@+id/doneButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
      android:text="DONE"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0.471"
      app:layout_constraintLeft_toRightOf="@id/guideline"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline9"
      app:layout_constraintVertical_bias="0.583" />

  <Button
      android:id="@+id/backButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
      android:text="DONE"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.474"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      app:layout_constraintTop_toTopOf="@+id/guideline9"
      app:layout_constraintVertical_bias="0.586"
      tools:visibility="visible" />

  <Button
      android:id="@+id/editButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="EDIT"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintHorizontal_bias="0.466"
      app:layout_constraintLeft_toRightOf="@+id/guideline"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline9"
      app:layout_constraintVertical_bias="0.515" />

  <ToggleButton
      android:id="@+id/favourite"
      android:layout_width="60dp"
      android:layout_height="60dp"
      android:layout_marginTop="24dp"
      android:layout_marginBottom="24dp"
      android:background="@drawable/ic_baseline_favorite_border_24"
      android:textOff=""
      android:textOn=""
      app:layout_constraintBottom_toTopOf="@+id/tagDisplay"
      app:layout_constraintRight_toRightOf="@id/buttonGuide"
      app:layout_constraintTop_toBottomOf="@+id/imgDisplay" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="300dp"
      android:layout_marginEnd="299dp"
      android:layout_marginBottom="959dp"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintGuide_percent="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/buttonGuide"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.9" />

  <Spinner
      android:id="@+id/tagSpinner"
      android:layout_width="0dp"
      android:layout_height="62dp"
      android:layout_marginTop="12dp"
      android:spinnerMode="dropdown"
      android:visibility="gone"
      app:layout_constraintBottom_toTopOf="@+id/editButton"
      app:layout_constraintEnd_toStartOf="@+id/removeTagButton"
      app:layout_constraintStart_toStartOf="@+id/guideline10"
      app:layout_constraintTop_toBottomOf="@+id/editTags"
      app:layout_constraintVertical_bias="0.003"
      tools:visibility="visible" />

  <Button
      android:id="@+id/removeTagButton"
      android:layout_width="54dp"
      android:layout_height="54dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      android:background="@drawable/ic_baseline_remove_circle_24"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/buttonGuide"
      app:layout_constraintTop_toBottomOf="@+id/addButton"
      app:layout_constraintVertical_bias="0.0"
      tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>