...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ClosetActivity"
    android:id="@+id/closetView">

    <GridView
        android:id="@+id/gridView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:numColumns="3"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...
